my custom config

--- a/config/swweeep.conf
+++ b/config/swweeep.conf
@@ -2,5 +2,12 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
+# Display settings
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+
 # Reduce font size of second row of status screen
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_20=y
