--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -6,6 +6,8 @@
   │ 20  21  22  23  24 │ │ 25  26  27  28  29 │
   ╰───────────╮ 30  31 │ │ 32  33 ╭───────────╯
               ╰────────╯ ╰────────╯            */
+#undef COMBO_HOOK
+#define COMBO_HOOK global-quick-tap-ms = <100>;
 
 #define COMBO(NAME, BINDINGS, KEYPOS, LAYERS, TERM, QUICKTAP) \
         combo_##NAME { \
@@ -19,27 +21,46 @@
 / {
     combos {
         compatible = "zmk,combos";
+        // UpperRow Left: &:#^
+        COMBO(amps,   &kp AMPS,      0  1, CMK QTY SYM, 40, 100)
+        COMBO(colon,  &kp COLON,     1  2, CMK QTY SYM, 40, 100)
+        COMBO(hash,   &kp HASH,      2  3, CMK QTY SYM, 40, 100)
+        COMBO(percnt, &kp CARET,     3  4, CMK QTY SYM, 40, 100)
+        // % squeezes between upper left and right
+        COMBO(caret,  &kp PRCNT,     4  5, CMK QTY SYM, 60, 200)
+        // UpperRow Right: $";*
+        COMBO(dollar, &kp DLLR,      5  6, CMK QTY SYM, 40, 100)
+        COMBO(dqt,    &kp DQT,       6  7, CMK QTY SYM, 40, 100)
+        COMBO(semi,   &kp SEMI,      7  8, CMK QTY SYM, 40, 100)
+        COMBO(astrk,  &kp ASTRK,     8  9, CMK QTY SYM, 40, 100)
+        // HomeRow Left: [({<
+        COMBO(lbkt,   &kp LBKT,     10 11, CMK QTY SYM, 40, 100)
+        COMBO(lpar,   &kp LPAR,     11 12, CMK QTY SYM, 40, 100)
+        COMBO(lbrc,   &kp LBRC,     12 13, CMK QTY SYM, 40, 100)
+        COMBO(lt,     &kp LT,       13 14, CMK QTY SYM, 40, 100)
+        // ! squeezes between upper left and right
+        COMBO(excl,   &kp EXCL,     14 15, CMK QTY SYM, 60, 200)
+        // HomeRow Right: >})]
+        COMBO(gt,     &kp GT,       15 16, CMK QTY SYM, 40, 100)
+        COMBO(rbrc,   &kp RBRC,     16 17, CMK QTY SYM, 40, 100)
+        COMBO(rpar,   &kp RPAR,     17 18, CMK QTY SYM, 40, 100)
+        COMBO(rbkt,   &kp RBKT,     18 19, CMK QTY SYM, 40, 100)
+        // BottomRow Left: ~-_`
+        COMBO(tilde,  &kp TILDE,    20 21, CMK QTY SYM, 40, 100)
+        COMBO(under,  &kp UNDER,    21 22, CMK QTY SYM, 40, 100)
+        COMBO(minus,  &kp MINUS,    22 23, CMK QTY SYM, 40, 100)
+        COMBO(grave,  &kp GRAVE,    23 24, CMK QTY SYM, 40, 100)
+        // ? squeezes between upper left and right
+        COMBO(at,  &kp AT,          24 25, CMK QTY SYM, 60, 200)
+        // BottomRow Right: |+=\
+        COMBO(pipe,   &kp PIPE2,     25 26, CMK QTY SYM, 40, 100)
+        COMBO(plus,   &kp PLUS,     26 27, CMK QTY SYM, 40, 100)
+        COMBO(equal,  &kp EQUAL,    27 28, CMK QTY SYM, 40, 100)
+        COMBO(bslh,   &kp BSLH,     28 29, CMK QTY SYM, 40, 100)
+        
+        COMBO(tab,    &kp TAB,      11 13, CMK QTY SYM, 40, 100)
+        COMBO(bspc,   &kp BSPC,     16 18, CMK QTY SYM, 40, 100)
 
-COMBO(semi,   &kp SEMI,      6  7, DEF QWE, 40, 100)
-COMBO(lpar,   &kp LPAR,     12 13, DEF QWE, 40, 100)
-COMBO(rpar,   &kp RPAR,     16 17, DEF QWE, 40, 100)
-COMBO(lbkt,   &kp LBKT,     11 12, DEF QWE, 40, 100)
-COMBO(rbkt,   &kp RBKT,     17 18, DEF QWE, 40, 100)
-COMBO(tab,    &kp TAB,      11 13, DEF QWE, 40, 200)
-COMBO(bspc,   &kp BSPC,     16 18, DEF QWE, 40, 200)
-COMBO(grave,  &kp GRAVE,    22 23, DEF QWE, 40, 100)
-COMBO(tilde,  &kp TILDE,    21 22, DEF QWE, 40, 100)
-COMBO(bslh,   &kp BSLH,     26 27, DEF QWE, 40, 100)
-COMBO(pipe,   &kp PIPE,     27 28, DEF QWE, 40, 100)
-
-COMBO(capswd, &caps_word,   13 16, DEF QWE, 60, 200)
-
-#ifdef MOUSE_KEYS
-#    ifndef THREE_THUMBS
-COMBO(mse_l,  &mo MSE,      30 31, DEF QWE, 100,  0)
-#    else
-COMBO(mse_l,  &mo MSE,      31 32, DEF QWE, 100,  0)
-#    endif
-#endif
+        COMBO(capswd, &caps_word,   13 16, CMK QTY SYM, 60, 200)
     };
 };
