--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -18,4 +18,4 @@ jobs:
       output_folder: keymap-drawer
       install_branch: main
       amend_commit: true
-      draw_args: "swweeep:'`--ortho-layout {split: true, rows: 3, columns: 5, thumbs: 3}`'"
+      draw_args: "swweeep:'`--ortho-layout {split: true, rows: 3, columns: 5, thumbs: 3}`'
